frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
        - image: khanster/frontend:kube
          name: frontend
          ports:
            - containerPort: 8080
              protocol: TCP
