frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    run: frontend
  name: frontend
spec:
  type: LoadBalancer
  clusterIP: 192.168.61.34
  externalIPs: 
    - 192.168.61.34
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    run: frontend
