frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopping-svc
  labels:
    app: shopping
spec:
  type: LoadBalancer
  externalIPs: 
  - 192.168.61.11
  selector:
    app: shopping
  ports:
    - port: 8080
      targetPort: 8080
