frontend/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    run: web
  name: web
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.0.11
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    run: web
